--- a/springio/slides-docinfo.html
+++ b/springio/slides-docinfo.html
@@ -95,7 +95,7 @@ hr {
 }
 
 .icon img {
-  top: 45px;
+  top: 105px;
   left: 40px;
   width: 128px;
   height: auto;
@@ -123,14 +123,14 @@ hr {
 .icon ul {
 top: 140px;
 font-size: 25px;
-margin-top: -325px;
+margin-top: -425px;
 margin-left: 175px;
 left: 200px;
 right: 20px;
 }
 
 .bannerleft img {
-  top: 45px;
+  top: 105px;
   left: 10px;
   width: 300px;
   border: 2px solid black;
@@ -151,8 +151,8 @@ right: 20px;
 .bannerleft ul {
 top: 140px;
 font-size: 25px;
-margin-top: -325px;
-margin-left: 285px;
+margin-top: -450px;
+margin-left: 275px;
 left: 400px;
 right: 20px;
 }
@@ -210,6 +210,13 @@ right: 20px;
   float: left;
   top: 0px;
   width: 50%;
+}
+
+.listing-middle {
+  font-size: 30px;
+  position: relative;
+  top: 30%;
+  transform: translate(0, -50%);
 }
 
 .code-small code {
