updates changes of arquillian js slides.

--- a/arquillian-loves-js/slides.html
+++ b/arquillian-loves-js/slides.html
@@ -1457,7 +1457,7 @@ pg.doPayment(...);</code></pre></div>
     &lt;dependency&gt;
       &lt;groupId&gt;org.jboss.arquillian&lt;/groupId&gt;
       &lt;artifactId&gt;arquillian-bom&lt;/artifactId&gt;
-      &lt;version&gt;1.1.7.Final&lt;/version&gt;
+      &lt;version&gt;1.1.8.Final&lt;/version&gt;
       &lt;scope&gt;import&lt;/scope&gt;
       &lt;type&gt;pom&lt;/type&gt; <i class="conum" data-value="1"></i><b>(1)</b>
     &lt;/dependency&gt;
@@ -1530,7 +1530,7 @@ submit.click();
 WebElement welcomeMessage = driver.findElement(By.id(<span class="string"><span class="delimiter">&quot;</span><span class="content">welcomeMessage</span><span class="delimiter">&quot;</span></span>));
 
 assertThat(welcomeMessage.getText(), is(<span class="string"><span class="delimiter">&quot;</span><span class="content">Welcome</span><span class="delimiter">&quot;</span></span>));</code></pre></div></section>
-<section class="icon"><h2>Arquillian <em>Drone</em>/<em>Graphene</em></h2><figure><img src="./images/drone.png" alt="drone"><figcaption></figcaption></figure>
+<section class="icon"><h2>Arquillian <em>Drone</em>/<em>Graphene</em> extension</h2><figure><img src="./images/drone.png" alt="drone"><figcaption></figcaption></figure>
 <ul><li> <span class="icon"><i class="fa fa-caret-right"></i></span> <em>Drone</em> adds <em>WebDriver</em> to Arquillan</li><li> <span class="icon"><i class="fa fa-caret-right"></i></span> <em>Multiple</em> browsers in single test</li><li> <span class="icon"><i class="fa fa-caret-right"></i></span> <em>Graphene</em> adds <em>sexy</em> webdriver API</li><li> <span class="icon"><i class="fa fa-caret-right"></i></span> <em>AJAX</em>-enabled</li><li> <span class="icon"><i class="fa fa-caret-right"></i></span> <em>PageObjects</em> pattern</li><li> <span class="icon"><i class="fa fa-caret-right"></i></span> <em>JQuery</em> selectors</li><li> <span class="icon"><i class="fa fa-caret-right"></i></span> Call <em>JavaScript</em> as Java</li><li> <span class="icon"><i class="fa fa-caret-right"></i></span> Integrates with <em>QUnit</em></li></ul></section>
 <section class="icon"><h2>Arquillian AngularJS extension</h2><figure><img src="./images/angular.png" alt="angular"><figcaption></figcaption></figure>
 <ul><li> <span class="icon"><i class="fa fa-caret-right"></i></span> Extend capabilities of <em>Graphene</em></li><li> <span class="icon"><i class="fa fa-caret-right"></i></span> <em>Sycnhronize</em> AngularJS calls</li><li> <span class="icon"><i class="fa fa-caret-right"></i></span> <code>@FindByNg</code> annotation support</li></ul></section>
